colocando ajustando o layout da second section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div class="card2__content">
                 <h1 class="card2__content--title title">Sobre mim</h1>
                 <p>Sou psicóloga formada pela University of California, com experiência clínica no atendimento a crianças, adolescentes e adultos. Atuo com foco no bem-estar emocional e autoconhecimento, utilizando a Terapia Cognitivo-Comportamental (TCC) como principal abordagem. Meu trabalho é baseado na empatia, escuta ativa e no acolhimento cuidadoso das necessidades de cada indivíduo.</p>
+                <a href="#">Saiba mais</a>
             </div>
         </div>
     </section>
